--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top" data-ng-init="init()">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -43,7 +43,7 @@
           </span>
         </form>
       </div>
-      <h2>Your Language Matches</h2> 
+      <h2>Your Language Matches</h2>
       <div class="usermatches col-md-9">
         <div ng-repeat="user in users" class="col-md-4">
           <h4 class="matchtext">{{user.firstname}} {{user.lastname}}</h4>
