--- a/client/footer.html
+++ b/client/footer.html
@@ -1,6 +1,6 @@
 <div class="container">
   <hr>
   <footer>
-    <p>&copy; Language Exchange, Inc. 2015</p>
+    <p>&copy; Linkuistic, Inc. 2015</p>
   </footer>
 </div>
