--- a/client/home.html
+++ b/client/home.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#/">Language Exchange</a>
+      <a class="navbar-brand" href="#/">Linkuistic</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -22,9 +22,11 @@
 <div class="jumbotron">
   <div class="container">
     <div ng-if="!showChatApp">
-    <h1>Talk French with a Frenchman.</h1>
-    <p>Language Exchange instantly connects you with other language learners so you can practice together.<br>
-       Trade langauges. Trade stories.</p>
+    <h1>Welcome to Linkuistic</h1>
+    <h2>Speak. Share. Connect</h2>
+    <p>Linkuistic helps you find friends from across the world who speak the languages you want to learn! Sign up today!!</p>
+      <a href="/#/signup"><button type="button" class="btn btn-primary btn-lg">Sign Up</button></a>
+      <a href="/#/signin"><button type="button" class="btn btn-success btn-lg">Sign In</button></a>
     </div>
     <div ng-if="showChatApp" class="fx-fade-up fx-speed-500 fx-easing-back">
       <h2> Topic: How did you spend your last vacation? </h1>
